--- a/index.html
+++ b/index.html
@@ -1,16 +1,9 @@
 <!DOCTYPE html>
 <html lang="ru" data-lt-installed="true">
-  <link type="text/css" rel="stylesheet" id="dark-mode-custom-link" />
-  <link type="text/css" rel="stylesheet" id="dark-mode-general-link" />
-  <style lang="en" type="text/css" id="dark-mode-custom-style"></style>
-  <style lang="en" type="text/css" id="dark-mode-native-style"></style>
   <head>
     <meta charset="utf-8" />
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
-    <meta name="viewport" content="width=device-width, initial-scale=1,shrink-to-fit=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <title>Hexlet Frontend Project</title>
-    <!--<script defer="defer" src="main.js"></script>
-    <link href="main.css" rel="stylesheet" /> -->
   </head>
   <body class="d-flex flex-column min-vh-100">
     <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="modal" aria-hidden="true">
@@ -68,7 +61,7 @@
     </main>
     <footer class="footer border-top py-3 mt-5 bg-light">
       <div class="container-xl">
-        <div class="text-center">created by <a href="https://github.com/aleksusergit/frontend-project-11" target="_blank">Hexlet</a></div>
+        <div class="text-center">created by <a href="https://github.com/aleksusergit/frontend-project-11" target="_blank">aleksusergit</a></div>
       </div>
     </footer>
   </body>
