--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           </div>
           <div class="modal-body text-break"></div>
           <div class="modal-footer">
-            <a class="btn btn-primary full-article" href="#" role="button" target="_blank" rel="noopener noreferrer">Читать полностью </a>
+            <a class="btn btn-primary full-article" href="#" role="button" target="_blank" rel="noopener noreferrer"> Читать полностью </a>
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
           </div>
         </div>
@@ -41,10 +41,12 @@
                       placeholder="ссылка RSS"
                       autocomplete="off"
                     />
-                    <label for="url-input">Ссылка RSS</label>
+                    <label for="url-input"> Ссылка RSS </label>
                   </div>
                 </div>
-                <div class="col-auto"><button type="submit" aria-label="add" class="h-100 btn btn-lg btn-primary px-sm-5">Добавить</button></div>
+                <div class="col-auto">
+                  <button type="submit" aria-label="add" class="h-100 btn btn-lg btn-primary px-sm-5">Добавить</button>
+                </div>
               </div>
             </form>
             <p class="mt-2 mb-0 text-muted">Пример: https://ru.hexlet.io/lessons.rss</p>
@@ -61,7 +63,10 @@
     </main>
     <footer class="footer border-top py-3 mt-5 bg-light">
       <div class="container-xl">
-        <div class="text-center">created by <a href="https://github.com/aleksusergit/frontend-project-11" target="_blank">aleksusergit</a></div>
+        <div class="text-center">
+          created by
+          <a href="https://github.com/aleksusergit/frontend-project-11" target="_blank"> aleksusergit </a>
+        </div>
       </div>
     </footer>
   </body>
